add tournaments to big list
