# api/swagger.yaml
@@ -148,6 +148,10 @@ definitions:
         type: string
         format: url
         example:  https://www.acme-corp.com
+      created_at:
+        type: string
+        format: int32
+        example: 2018-09-09T12:28:16.031Z
 # Added by API Auto Mocking Plugin
 host: brackets.superminerbattle.farm
 basePath: /api/1.0.0
